# CSC_580_Final_Project

./: .gitignore  README.md  pyproject.toml
docs/: architecture_overview.md  colab_git_drive_workflow.md  configuration_reference.md  evaluation_checklist.md  milestones.md  risk_register.md
examples/: base_experiment.yaml  h100_amp_experiment.yaml  h100_experiment.yaml  h100_screening_experiment.yaml  optimized_experiment.yaml  training_run.yaml
notebooks/: 01_colab_git_drive_setup.ipynb  01_colab_setup_and_smoke_tests.ipynb  02_colab_sanity_run.ipynb  02_colab_training_runs.ipynb  03_colab_baseline_run.ipynb  04_colab_h100_run.ipynb  05_colab_optimized_run.ipynb  06_colab_h100_amp_run.ipynb  07_colab_screening_run.ipynb  README.md
src/tiny_dreamer_highway/: __init__.py  cli.py  config.py  types.py
src/tiny_dreamer_highway/data/: __init__.py  collect_random_rollouts.py  replay_buffer.py
src/tiny_dreamer_highway/envs/: __init__.py  highway_factory.py
src/tiny_dreamer_highway/evaluation/: __init__.py  artifact_bundle.py  policy_rollout.py  (+3 more)
tests/: test_action_processing.py  test_artifact_bundle.py  test_behavior.py  test_checkpointing.py  test_cli.py  test_collect_random_rollouts.py  test_config.py  test_decoder.py  test_encoder.py  test_env_config.py  test_metrics_logging.py  test_optimizations.py  test_pipeline_smoke.py  test_policy_rollout.py  test_prediction_eval.py  test_prediction_visualization.py  test_replay_buffer.py  test_rssm.py  test_seeding.py  test_sequence_world_model.py  test_training_analysis.py  test_training_experiment.py  test_world_model.py
(+19 files in other folders)
